syntax = "proto2";

package dev.vhonta.news.proto;

import "zio-temporal.proto";
import "news_feed.proto";

message NewsFeedRecommendation {
  required zio.temporal.protobuf.UUID id = 1;
  required zio.temporal.protobuf.UUID owner = 2;
  required zio.temporal.protobuf.UUID topic = 3;
  required int64 forDate = 4;
}

message NewsFeedRecommendationArticle {
  required zio.temporal.protobuf.UUID recommendation = 1;
  required zio.temporal.protobuf.UUID article = 2;
}

message NewsFeedRecommendationView {
  required zio.temporal.protobuf.UUID topicId = 1;
  required string topic = 2;
  required int64 date = 3;
  repeated dev.vhonta.news.proto.NewsFeedArticle articles = 4;
}